:lipstick: Align post titles in center to avoid long titles looking strange

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -288,6 +288,7 @@ textarea {
 .post--title {
   color: var(--primary-dark);
   font-size: 2.8em;
+  text-align: center;
 }
 
 .profile-field-heading {
